[gd_scene load_steps=3 format=2]

[ext_resource path="res://font.tres" type="DynamicFont" id=1]
[ext_resource path="res://fun/pop1.gd" type="Script" id=2]

[node name="Popup" type="Popup"]
visible = true
margin_left = 320.0
margin_top = 128.0
margin_right = 776.0
margin_bottom = 472.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 328.0

[node name="Label" type="Label" parent="Panel/Panel"]
margin_top = 8.0
margin_right = 104.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Panel/Panel"]
margin_top = 48.0
margin_right = 104.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label3" type="Label" parent="Panel/Panel"]
margin_top = 88.0
margin_right = 104.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label4" type="Label" parent="Panel/Panel"]
margin_top = 128.0
margin_right = 104.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label5" type="Label" parent="Panel/Panel"]
margin_top = 168.0
margin_right = 104.0
margin_bottom = 208.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label6" type="Label" parent="Panel/Panel"]
margin_top = 208.0
margin_right = 104.0
margin_bottom = 248.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label7" type="Label" parent="Panel/Panel"]
margin_top = 248.0
margin_right = 104.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Panel2" type="Panel" parent="Panel"]
margin_left = 312.0
margin_top = 16.0
margin_right = 440.0
margin_bottom = 328.0

[node name="Label" type="Label" parent="Panel/Panel2"]
margin_top = 8.0
margin_right = 104.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Panel/Panel2"]
margin_top = 48.0
margin_right = 104.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label3" type="Label" parent="Panel/Panel2"]
margin_top = 88.0
margin_right = 104.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label4" type="Label" parent="Panel/Panel2"]
margin_top = 128.0
margin_right = 104.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label5" type="Label" parent="Panel/Panel2"]
margin_top = 168.0
margin_right = 104.0
margin_bottom = 208.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label6" type="Label" parent="Panel/Panel2"]
margin_top = 208.0
margin_right = 104.0
margin_bottom = 248.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label7" type="Label" parent="Panel/Panel2"]
margin_top = 248.0
margin_right = 104.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Panel3" type="Panel" parent="Panel"]
margin_left = 168.0
margin_top = 16.0
margin_right = 296.0
margin_bottom = 328.0

[node name="Label" type="Label" parent="Panel/Panel3"]
margin_top = 8.0
margin_right = 104.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Panel/Panel3"]
margin_top = 48.0
margin_right = 104.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label3" type="Label" parent="Panel/Panel3"]
margin_top = 88.0
margin_right = 104.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label4" type="Label" parent="Panel/Panel3"]
margin_top = 128.0
margin_right = 104.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label5" type="Label" parent="Panel/Panel3"]
margin_top = 168.0
margin_right = 104.0
margin_bottom = 208.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label6" type="Label" parent="Panel/Panel3"]
margin_top = 208.0
margin_right = 104.0
margin_bottom = 248.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1

[node name="Label7" type="Label" parent="Panel/Panel3"]
margin_top = 248.0
margin_right = 104.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 1 )
text = "道号：小徐"
align = 1
valign = 1
